# crossref-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: cn.rs  crossref.rs  error.rs  lib.rs  main.rs  model.rs  proto.rs  query.rs  serialize.rs  types.rs
src/query/: facet.rs  funders.rs  journals.rs  member.rs  members.rs  mod.rs  prefixes.rs  types.rs  works.rs
src/response/: mod.rs  work.rs
