[package]
name = "crossref-rs"
version = "0.1.0"
authors = ["matthiasseitz <matthias.seitz@tum.de>"]
license = "MIT OR Apache-2.0"
description= "Implementation of the Crossref API"
edition = "2018"

[[bin]]
name = "crossref"
path = "src/main.rs"
required-features =["cli"]

[dependencies]
reqwest = "0.9.10"
serde_derive = "1.0.88"
serde = "1.0.88"
failure = "0.1.5"
serde_json = "1.0.38"
chrono =  {version = "0.4.6", features = ["serde"] }
hyper-tls = { version = "0.3.1", optional= true }
hyper = { version = "0.12.24", optional = true }
structopt =  { version =  "0.2.14", optional = true }
url = "1.7.2"

[features]
client = ["hyper", "hyper-tls"]
cli = ["structopt"]
